--- a/src/customize.yaml
+++ b/src/customize.yaml
@@ -345,6 +345,14 @@
       friendly_name: "Feuchte Filament"
       icon: "mdi:signal-variant"
 # -----------------------------------------------
+    sensor.dev200_rki_celle_7day:
+      friendly_name: "7 Tage Incident für Celle"
+      icon: "mdi:mdi-hospital"
+
+    sensor.dev200_rki_noh_7day:
+      friendly_name: "7 Tage Incident für Noh"
+      icon: "mdi:mdi-hospital"   
+# -----------------------------------------------
     light.dev11_l1:
       friendly_name: "Fan"
       icon: "mdi:lamp"
