--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
         "*.yaml": "home-assistant"
-    }
+    },
+
+    "python.defaultInterpreterPath": "/Users/stephan_wink/workspace_github/ha_config/src/appdaemon/appdaemon_env/bin"
+      
 }
